# Rusty-Code

./: .gitignore  Cargo.toml  README.md  
src/: main.rs  model.rs  view.rs
src/controller/: cursor.rs  input.rs  mod.rs
src/model/: app.rs  mod.rs
