[package]
name = "rusty_code"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30.2", features = ["all-widgets"]}
color-eyre = "0.6"
tui-big-text = "0.8"
arboard = "3.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
futures-util = "0.3"
